--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
               <p>	3rd Person Jump & Run where you try to finish a course as fast as you can.
 			            Made in 3 months with a team of 2 programmers.
 		          </p>
-		          <a href="https://drive.google.com/open?id=1YJKFfv5xN0EfyG1QhDNtvsDTvhqEdyKX">Download</a>
+		          <a href="/UPC-PostMortem.html">Download</a>
           </div>
         </div>
         <!-- Third Photo -->
