Post mortem changes

--- a/UPC-PostMortem.html
+++ b/UPC-PostMortem.html
@@ -46,6 +46,9 @@
         <div style='position:relative;padding-bottom:54%'><iframe src='https://gfycat.com/ifr/RegularAbsoluteEnglishpointer' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0' allowfullscreen></iframe></div><p></p>
         <p> First prototype of the movement system. This was roughly 2 months before the submission deadline.
         </p>
+        <p align = "middle">
+            A Xbox controller is needed in order to play!
+        </p>
         <a href="https://drive.google.com/open?id=1YJKFfv5xN0EfyG1QhDNtvsDTvhqEdyKX"><p align = "middle" style="color:red;font-size:30px;">Download here</p></a>
 
 
