Started complete rework of website to be responsive

--- a/aboutme.html
+++ b/aboutme.html
@@ -1,151 +1,107 @@
 <html>
-
-<head>
-
-	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
-  <title>About Me</title>
-  
-  <link rel="stylesheet" href="css/stylesheet.css">
-  
-</head>
-  
-<body>
-
 <header>
-  <nav class="header-nav">
-    <h1><a href="/">Kienauer Rene</a></h1>
-    <ul>
-      <li>
-        <a href="/" title="Home"><i class="fa fa-home" aria-hidden="true"></i>Home</a>
-      </li>
-      <li>
-        <a href="/archive.html" title="Browse Posts"><i class="fa fa-archive" aria-hidden="true"></i>Browse Posts</a>
-      </li>
-      <li>
-        <a href="/projects.html" title ="Projects"><i class="fas fa-project-diagram" aria-hidden="true"></i>Projects</a>
-      </li>
-      <li>
-        <a href="/aboutme.html" title="About Me"><i class="fas fa-user" aria-hidden="true"></i>About Me</a>
-      </li>
-    </ul>
-  </nav>
+    <title>AboutMe</title>
+    <link rel="stylesheet" href="stylesheet.css">
 </header>
 
-<main>
-	<article>
-	
-		<header>
-			<h1>About Me</h1>
-			<br>
-		</header>
+<body>
+    <ul class="navigation">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">Game Jams</a></li>
+        <li><a href="#">Archive</a></li>
+        <li><a href="#">About Me</a></li>
+    </ul>
 
-		<img src="images/me.jpg" alt="Me" width="60%" height="60%">
-		  
-		<div class="content">
-  		<div class="w3-container w3-padding-large" style="margin-bottom:32px">
-    		<p>	Hello there, my name is Rene Kienauer and I love making games. Since I can remember I have always been playing and talking about games.
-						Even though I wanted to be a gameplay progammer since I was 10 I did not really
-						pursue this pipe dream until much later in life. Now I have found my calling and cant stop thinking about programming and designing them!
-				</p>
-				<br>
-				<p> When I am not dreaming up solutions for problems (programming) or dreaming up problems to solve (game design) then I am mostly watching all kinds
-						of media I can get my hands on like good movies, lots of Youtube and different Twitch streams. I also do a lot of reading on Reddit and Twitter, probably much more than I should.
-						Sometimes even you can find me on the outdoors reaching the top of an mountain or going for a run. I also enjoy politics, psychology, boats and the occasional party.
-				</p>	
-				<hr>
-				
-    		<h4>Programming</h4>
-				<p>	I have been programming now seriously for about three years before that I made some first experiences in the higher technical college I visited. I love
-						the feeling of figuring out solutions to problems and then see them work in reality. Even though there is still much to learn for me I have
-						the strong feeling that given enough time, no matter how hard the problem may seem at first, I can arrive at an working solution!
-				</p>
-			
-				<p><b> Topics </b></p>
-				<p> Object Oriented, Data Oriented, Networking, Design Patterns, Game Engine Architecture, Basic OpenGL/DirectX, Git, SVN </p>
-    		<div class="w3-grey">
-      			<div class="w3-container w3-dark-grey w3-padding w3-center" style="width:75%">75%</div>
-    		</div>
+    <row-container>
+        <h1>About Me</h1>
+    </row-container>
 
-				<br>
-				<hr>
-	
-				<h4>Mathematics</h4>
-					<p> Since my electrical engineering days I have been a fan of solving math problems. I dont think I am very good at it but nevertheless I will keep on trying.
-							Today I mostly deal with practical math problems in form of gameplay equations, easing equations and lots of vector math.
-					</p>
+    <img src="images/me.jpg" alt="Me" width="20%" height="20%">
 
-				<p><b> Topics </b></p>
-				<p> Vector Algebra, Matrix Algebra, Transformations </p>
-    		<div class="w3-grey">
-      		<div class="w3-container w3-dark-grey w3-padding w3-center" style="width:40%">40%</div>
-				</div>
-			
-				<br>
-				<hr>
-	
-				<h4>Game Design</h4>
-		    	<p> I fell in love with game design at university just because no one else would do it. Slowly I failed my way upward, project per project until suddenly
-						the games I made could be interpreted as fun. There is something very fascinating about having an initial idea and then iterating on it until it someone has fun playing it.
-						SAE Institute allowed me to do severall protoypes, game jams, a card game and even one "finished" game which all were a massive learning expercience!
-					</p>
-    		<div class="w3-grey">
-      		<div class="w3-container w3-dark-grey w3-padding w3-center" style="width:65%">65%</div>
-    		</div>
-	
-				<br>
-				<hr>
-	
-				<h4>Unity</h4>
-		    	<p>	In the last two years I learned the in and outs of game development with the Unity Engine. Now after two years
-						of using the engine I am confident to say that I am very comfortable with everything Unity related.
-					</p>
-    		<div class="w3-grey">
-      		<div class="w3-container w3-dark-grey w3-padding w3-center" style="width:90%">90%</div>
-    		</div>
-	
-				<br>
-				<hr>
-	
-    		<h4>C#</h4>
-					<p> Most of my C# experience is inside Unity, only some minor experiences building tools in C# with WinForm. The biggest challenges I faced were about Maintainability / Readability of the gameplay code 
-					architecture.
-					</p>
-    		<div class="w3-grey">
-      		<div class="w3-container w3-dark-grey w3-padding w3-center" style="width:70%">70%</div>
-    		</div>
-	
-				<br>
-				<hr>
-	
-				<h4>C++</h4>
-				<p> Mostly playing around with different projects. I already tried twice to build an Renderer for an custom game engine but always was sidetracked
-						by the game projects because it just took to long. I know how to porgamm and work with it but lack serious experience with it.
-				</p>
-    		<div class="w3-grey">
-      		<div class="w3-container w3-dark-grey w3-padding w3-center" style="width:35%">35%</div>
-    		</div>
-	
-				<br>
-				<hr>
-	
-				<h4>Rust</h4>
-				<p> I am currently in the process of trying out Rust and most certainly want to further my knowledege in this language. It is much more pleasant to
-						work with than C++ but I recognize that it will take time to be robust enough for game programming.
-				</p>
-    		<div class="w3-grey">
-      		<div class="w3-container w3-dark-grey w3-padding w3-center" style="width:10%">5%</div>
-				</div>
-			</div>
-		</div>
-	</article>
-</main>
+    <text-center>
+        Hello there, my name is Rene Kienauer and I love making games. Since I can remember I have always been playing and talking
+        about games. Even though I wanted to be a gameplay progammer since I was 10 I did not really pursue this pipe dream
+        until much later in life. Now I have found my calling and cant stop thinking about programming and designing them!
+    </text-center>
+    <br>
+    <br>
+    <text-center>
+        When I am not dreaming up solutions for problems (programming) or dreaming up problems to solve (game design) then I am mostly
+        watching all kinds of media I can get my hands on like good movies, lots of Youtube and different Twitch streams.
+        I also do a lot of reading on Reddit and Twitter, probably much more than I should. Sometimes even you can find me
+        on the outdoors reaching the top of an mountain or going for a run. I also enjoy politics, psychology, boats and
+        the occasional party.
+    </text-center>
 
-<footer>
-  <h3>Kienauer Rene</h3>
-</footer>
+    <hr>
+    <h2>Programming</h2>
+    <text-center>
+        I have been programming now seriously for about three years before that I made some first experiences in the higher technical
+        college I visited. I love the feeling of figuring out solutions to problems and then see them work in reality. Even
+        though there is still much to learn for me I have the strong feeling that given enough time, no matter how hard the
+        problem may seem at first, I can arrive at an working solution!
+    </text-center>
+    <h3><b> Topics </b></h3>
+    <text-center style="justify-content: left">
+        Object Oriented, Data Oriented, Networking, Design Patterns, Game Engine Architecture, Basic OpenGL/DirectX, Git, SVN
+    </text-center>
+    <br>
+    <hr>
+
+    <h2>Mathematics</h2>
+    <text-center>
+        Since my electrical engineering days I have been a fan of solving math problems. I dont think I am very good at it but nevertheless
+        I will keep on trying. Today I mostly deal with practical math problems in form of gameplay equations, easing equations
+        and lots of vector math.
+    </text-center>
+    <h3><b> Topics </b></h3>
+    <text-center style="justify-content: left">
+        Vector Algebra, Matrix Algebra, Transformations
+    </text-center>
+    <br>
+    <hr>
+
+    <h2>Game Design</h2>
+    <text-center>
+        I fell in love with game design at university just because no one else would do it. Slowly I failed my way upward, project
+        per project until suddenly the games I made could be interpreted as fun. There is something very fascinating about
+        having an initial idea and then iterating on it until it someone has fun playing it. SAE Institute allowed me to
+        do severall protoypes, game jams, a card game and even one "finished" game which all were a massive learning expercience!
+    </text-center>
+    <br>
+    <hr>
+
+    <h2>Unity</h2>
+    <text-center>
+        In the last two years I learned the in and outs of game development with the Unity Engine. Now after two years of using the
+        engine I am confident to say that I am very comfortable with everything Unity related.
+    </text-center>
+    <br>
+    <hr>
+
+    <h2>C#</h2>
+    <text-center>
+        Most of my C# experience is inside Unity, only some minor experiences building tools in C# with WinForm. The biggest challenges
+        I faced were about Maintainability / Readability of the gameplay code architecture.
+    </text-center>
+    <br>
+    <hr>
+
+    <h2>C++</h2>
+    <text-center>
+        Mostly playing around with different projects. I already tried twice to build an Renderer for an custom game engine but always
+        was sidetracked by the game projects because it just took to long. I know how to porgamm and work with it but lack
+        serious experience with it.
+    </text-center>
+    <br>
+    <hr>
+
+    <h2>Rust</h2>
+    <text-center> I am currently in the process of trying out Rust and most certainly want to further my knowledege in this
+        language. It is much more pleasant to work with than C++ but I recognize that it will take time to be robust enough
+        for game programming.
+    </text-center>
 
 </body>
 </html>
