--- a/projects.html
+++ b/projects.html
@@ -1,130 +1,86 @@
 <html>
-
-<head>
-
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <title>Projects</title>
-
-  <link rel="stylesheet" href="css/stylesheet.css">
-
-</head>
-  
-<body>
-
 <header>
-  <nav class="header-nav">
-    <h1><a href="/">Kienauer Rene</a></h1>
-    <ul>
-      <li>
-        <a href="/" title="Home"><i class="fa fa-home" aria-hidden="true"></i>Home</a>
-      </li>
-      <li>
-        <a href="/archive.html" title="Browse Posts"><i class="fa fa-archive" aria-hidden="true"></i>Browse Posts</a>
-      </li>
-      <li>
-        <a href="/projects.html" title ="Projects"><i class="fas fa-project-diagram" aria-hidden="true"></i>Projects</a>
-      </li>
-      <li>
-        <a href="/aboutme.html" title="About Me"><i class="fas fa-user" aria-hidden="true"></i>About Me</a>
-      </li>
-    </ul>
-  </nav>
+    <title>Projects</title>
+    <link rel="stylesheet" href="stylesheet.css">
 </header>
 
-<main>
-  <article>
-	
-	  <header>
-		  <h1>Projects</h1>
-    </header>
-  
-    <br>
-  
-	  <div class="content">
+<body>
+    <ul class="navigation">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">Game Jams</a></li>
+        <li><a href="#">Archive</a></li>
+        <li><a href="#">About Me</a></li>
+    </ul>
 
-      <!-- First Row -->
-      <div class="w3-row-padding">
-        <!-- First Photo -->
-        <div class="w3-third w3-container w3-margin-bottom">
-          <img src="images/AnimalSquad.png" alt="AnimalSquad" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-white">
-              <p><b>Animal Squad</b></p>
-              <p> Two player turn based strategy game. Currently still working on it as part of
-			            the end project at SAE Vienna. Login Information is needed to play!
-		          </p>
-		          <a href="https://drive.google.com/open?id=1zlxKEXjIKr9dohQi9AI-WzND_RXzo3oM">Download</a>
-          </div>
-        </div>
-        <!-- Second Photo -->
-        <div class="w3-third w3-container w3-margin-bottom">
-          <img src="images/UltimateParkourChallenge.gif" alt="UltimateParkourChallenge" style="width:100%" class="w3-hover-opacity">
-            <div class="w3-container w3-white">
-              <p><b>Ultimate Parkour Challenge</b></p>
-              <p>	3rd Person Jump & Run where you try to finish a course as fast as you can.
-			            Made in 3 months with a team of 2 programmers.
-		          </p>
-		          <a href="/UPC-PostMortem.html">Download</a>
-          </div>
-        </div>
-        <!-- Third Photo -->
-        <div class="w3-third w3-container">
-          <img src="images/Facharbeit.png" alt="DataLocalityFacharbeit" style="width:100%" class="w3-hover-opacity">
-            <div class="w3-container w3-white">
-              <p><b>Data Locality Article</b></p>
-              <p> Article written as assignment while studying at SAE Vienna. I choose this topic because I
-			            am fascinated by high performance code.
-		          </p>
-		          <a href="https://drive.google.com/open?id=1WLriSEBdx8UplemSHKN1a7kgciOgOFar">Download</a>
-            </div>
-        </div>
-      </div>
-  
-      <!-- Second Row -->
-      <div class="w3-row-padding">
-       <!-- First Photo -->
-        <div class="w3-third w3-container w3-margin-bottom">
-          <img src="images/BeatPiston.gif" alt="BeatPiston" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-white">
-           <p><b>Beat Piston</b></p>
-           <p> Rythm Infinite Runner where you try to tap in rythm and dodge obstacles.
-			         Made in 48 hours for Global GameJam 2017.
-		       </p>
-		       <a href="https://drive.google.com/open?id=1bVo-R5nloY3rLqC1MIJFaBGD5Cf1wapY">Download</a>
-         </div>
-        </div>
-        <!-- Second Photo -->
-       <div class="w3-third w3-container w3-margin-bottom">
-          <img src="images/DieInTheUI.gif" alt="DieInTheUI" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-white">
-            <p><b>Die in the UI</b></p>
-            <p> Minigame Collection that are lossly based on the GameJam's theme "Bad UI".
-			          Made in 72 hours for Reversed Festivale GameJam 2017.
-		        </p>
-		       <a href="https://drive.google.com/open?id=1KY9o-PsbDrqeU4uz8e4XpLG9KeEZO8Av">Download</a>
-          </div>
-       </div>
-        <!-- Third Photo -->
-        <div class="w3-third w3-container">
-          <img src="images/TheBeatDown.gif" alt="TheBeatDown" style="width:100%" class="w3-hover-opacity">
-         <div class="w3-container w3-white">
-           <p><b>The Beat Down</b></p>
-           <p> Top Down Twin Stick Shooter where you must survive for 5 minutes.
-		            Made in 48 hours for BeansJam 2017. My first GameJam ever!
-		       </p>
-		       <a href="https://drive.google.com/open?id=1Edd65riaVe8gS3E4eoFX6TJ-_hjoQ0nK">Download</a>
-         </div>
-        </div>
-     </div>
-   </div>
-  </article>
-</main>
+    <collumn-container>
 
-<footer>
-  <h3>Kienauer Rene</h3>
-</footer>
+        <row-container>
+            <h1>Animal Squad</h1>
+        </row-container>
+
+        <row-container>
+            <img src="images/AnimalSquad.png" alt="AnimalSquad" style="width:300%">
+            <textMiddle>
+                Turn based strategy game in which you can fight a opponent to finally prove that you are the better tactician! Choose 5 animals
+                each with completly unqiue skills and try to combine their attacks to powerfull combos to gain the upperhand
+                in battle. Win your fights by managing your positioning, objectives and healthpoints.
+            </textMiddle>
+            <textRight>
+                This project was made as end project at SAE Vienna in about 6 month. The team consisted off 3 programmers and 3 artists including
+                myself. I was the Project Leader and coordinated most of the meetings and development targets. I worked on
+                every major system at least once. The hardest challenge was the networking of the game and making sure that
+                the client and the server did not desync. I also wrote a little bit about <a href="#" style ="display: inline-flex"> failing
+                    our way towards an usable User Interface.</a>
+            </textRight>
+        </row-container>
+
+        <image-container>
+            <img src="images/AnimalSquad.png" style="width:100%; margin:20px;">
+            <img src="images/AnimalSquad.png" style="width:100%; margin:20px;">
+            <img src="images/AnimalSquad.png" style="width:100%; margin:20px;">
+        </image-container>
+
+        <row-container>
+            <download><a href="#">Download</a></download>
+        </row-container>
+
+        <space-container>
+        </space-container>
+
+        <row-container>
+            <h1>Ultimate Parkour Challenge</h1>
+        </row-container>
+
+        <row-container>
+            <img src="images/UltimateParkourChallenge.gif" alt="UltimateParkourChallenge" style="width:200%">
+
+            <textMiddle>
+                Run,Jump,Long Jump, High Jump, Slide, Dash, Swing, WallRun and WallDash your way to the goal. In this epic jump & run the
+                focus is on the expressive moveset. You will have to chain together different moves and all that while trying
+                to dodge different types of obstacles allong the way.
+            </textMiddle>
+            <textRight>
+                From concept to finish me and a second programmer spend about 3 months working on this prototype. I mostly worked on the
+                character controller and spend a lot of my time to get the different moves feel right and transition to each
+                other smoothly. This project allowed me to solidify my linear algebra skills because each move in someway
+                needs to know a angle,direction or position. I wrote a little post mortem about this prototype <a
+                    href="#">which you can read here!</a>
+            </textRight>
+        </row-container>
+
+        <image-container>
+            <img src="images/AnimalSquad.png" style="width:100%; margin:20px;">
+            <img src="images/AnimalSquad.png" style="width:100%; margin:20px;">
+            <img src="images/AnimalSquad.png" style="width:100%; margin:20px;">
+        </image-container>
+
+        <row-container>
+            <download><a href="#">Download</a></download>
+        </row-container>
+
+    </collumn-container>
 
 </body>
+
 </html>
