--- a/aboutme.html
+++ b/aboutme.html
@@ -21,8 +21,8 @@
 
     <text-center>
         Hello there, my name is Rene Kienauer and I love making games. Since I can remember I have always been playing and talking
-        about games. Even though I wanted to be a gameplay progammer since I was 10 I did not really pursue this pipe dream
-        until much later in life. Now I have found my calling and cant stop thinking about programming and designing them!
+        about games. Even though I wanted to be a gameplay progammer since I was 10 I did not really pursue this dream until
+        much later in life. Now I have found my calling and cant stop thinking about programming and designing them!
     </text-center>
     <br>
     <br>
@@ -49,6 +49,23 @@
     <br>
     <hr>
 
+    <h2>C++</h2>
+    <text-center>
+        Mostly playing around with different projects. I know how to porgamm and work with it but lack serious project experience with it. I have set
+        it as my next goal to just do something in C++ and therefore started tinkering around with making an Game Engine in it. It is very hard but
+        I see continous progress and slowly I start geting the hang of it.
+    </text-center>
+    <br>
+    <hr>
+
+    <h2>C#</h2>
+    <text-center>
+        Most of my C# experience is inside Unity, only some minor experiences building tools in C# with WinForm. The biggest challenges
+        I faced were about Maintainability / Readability of the gameplay code architecture.
+    </text-center>
+    <br>
+    <hr>
+
     <h2>Mathematics</h2>
     <text-center>
         Since my electrical engineering days I have been a fan of solving math problems. I dont think I am very good at it but nevertheless
@@ -62,16 +79,6 @@
     <br>
     <hr>
 
-    <h2>Game Design</h2>
-    <text-center>
-        I fell in love with game design at university just because no one else would do it. Slowly I failed my way upward, project
-        per project until suddenly the games I made could be interpreted as fun. There is something very fascinating about
-        having an initial idea and then iterating on it until it someone has fun playing it. SAE Institute allowed me to
-        do severall protoypes, game jams, a card game and even one "finished" game which all were a massive learning expercience!
-    </text-center>
-    <br>
-    <hr>
-
     <h2>Unity</h2>
     <text-center>
         In the last two years I learned the in and outs of game development with the Unity Engine. Now after two years of using the
@@ -80,28 +87,16 @@
     <br>
     <hr>
 
-    <h2>C#</h2>
+    <h2>Game Design</h2>
     <text-center>
-        Most of my C# experience is inside Unity, only some minor experiences building tools in C# with WinForm. The biggest challenges
-        I faced were about Maintainability / Readability of the gameplay code architecture.
+        I fell in love with game design at university just because no one else would do it. Slowly I failed my way upward, project
+        per project until suddenly the games I made could be interpreted as fun. There is something very fascinating about
+        having an initial idea and then iterating on it until someone has fun playing it. SAE Institute allowed me to
+        do severall protoypes, game jams and even one physical card game game which all were a massive learning experience!
     </text-center>
     <br>
     <hr>
-
-    <h2>C++</h2>
-    <text-center>
-        Mostly playing around with different projects. I already tried twice to build an Renderer for an custom game engine but always
-        was sidetracked by the game projects because it just took to long. I know how to porgamm and work with it but lack
-        serious experience with it.
-    </text-center>
-    <br>
-    <hr>
-
-    <h2>Rust</h2>
-    <text-center> I am currently in the process of trying out Rust and most certainly want to further my knowledege in this
-        language. It is much more pleasant to work with than C++ but I recognize that it will take time to be robust enough
-        for game programming.
-    </text-center>
 
 </body>
+
 </html>
