--- a/gamejams.html
+++ b/gamejams.html
@@ -25,13 +25,13 @@
             <textMiddle>
                 Racing game where you are only able to break instead of accelerate. Drive down the junk yard track and try to dodge obstacles
                 all while keeping an eye on the constant increasing speed of your shopping cart. Keep the speed in a sweet
-                spot where your are simultaneosly fast enough to take the big air jumps and also slow enough to be able to
+                spot where you are simultaneosly fast enough to take the big air jumps and also slow enough to be able to
                 dodge hazards and collect new crowbars to be able to brake and steer your shopping cart towards the finish
                 line.
             </textMiddle>
             <textRight>
                 Made for Game Makers Toolkit GameJam 2018 in 48 hours. The theme was Genre without Mechanics. Me, a second programmer and
-                only one artists (credit to him for making so much stuff) tried to make a racing game with a twist. I am
+                only one artist (credit to him for making so much stuff) tried to make a racing game with a twist. I am
                 pretty happy with the feeling of speed you get while playing. The most interesting stuff to work on where
                 the jumps which are completly faked with the help of bezier curves, this allows for consistent fail and sucess
                 landing spots!
@@ -109,12 +109,12 @@
             <img src="images/TheBeatDown.gif" alt="AnimalSquad" style="width:230%">
             <textMiddle>
                 Shoot your way out of trouble and minimize the mafia bosses galactic army as dual wielding police space ranger. Use your
-                booster and keep on collecting the power up drops to hold out for 5 minutes and survive the onslaught of
+                booster and keep on collecting the spawning power ups to hold out for 5 minutes and survive the onslaught of
                 mafia henchman.
             </textMiddle>
             <textRight>
                 Made for BeansJam 2017 in 48 hours. The theme was Space Mafia. My first GameJam ever! Also the first time I worked in a group
-                on a game. After only 3 months experience of making games we decidied to jump in the cold water and just
+                on a game. After only 3 months experience of making games we decided to jump into the cold water and just
                 make something. Pretty happy with the results considering the circumstances. Also learned that the goal survive
                 for 5 minutes isnt that engaging for players.
             </textRight>
