--- a/projects.html
+++ b/projects.html
@@ -24,14 +24,14 @@
             <textMiddle>
                 Turn based strategy game in which you can fight a opponent to finally prove that you are the better tactician! Choose 5 animals
                 each with completly unqiue skills and try to combine their attacks to powerfull combos to gain the upperhand
-                in battle. Win your fights by managing your positioning, objectives and healthpoints.
+                in battle. Win your fights by managing positioning, objectives and healthpoints.
             </textMiddle>
             <textRight>
-                This project was made as end project at SAE Vienna in about 6 month. The team consisted off 3 programmers and 3 artists including
-                myself. I was the Project Leader and coordinated most of the meetings and development targets. I worked on
-                every major system at least once. The hardest challenge was the networking of the game and making sure that
-                the client and the server did not desync. I also wrote a little bit about <a href="#" style ="display: inline-flex"> failing
-                    our way towards an usable User Interface.</a>
+                This project was made as end project at SAE Vienna in about 6 month. The team was 3 programmers and 3 artists strong. I was
+                the Project Leader and coordinated most of the meetings and development targets. I worked on every major
+                system at least once. The hardest challenge was the networking of the game and making sure that the client
+                and the server did not desync. I also wrote a little bit about <a href="#" style="display: inline-flex">
+                    failing our way towards an usable User Interface.</a>
             </textRight>
         </row-container>
 
@@ -58,12 +58,12 @@
             <textMiddle>
                 Run,Jump,Long Jump, High Jump, Slide, Dash, Swing, WallRun and WallDash your way to the goal. In this epic jump & run the
                 focus is on the expressive moveset. You will have to chain together different moves and all that while trying
-                to dodge different types of obstacles allong the way.
+                to dodge different types of obstacles along the way.
             </textMiddle>
             <textRight>
                 From concept to finish me and a second programmer spend about 3 months working on this prototype. I mostly worked on the
                 character controller and spend a lot of my time to get the different moves feel right and transition to each
-                other smoothly. This project allowed me to solidify my linear algebra skills because each move in someway
+                other smoothly. This project allowed me to solidify my linear algebra skills because each state in someway
                 needs to know a angle,direction or position. I wrote a little post mortem about this prototype <a
                     href="#">which you can read here!</a>
             </textRight>
