Finished gamejams.html

--- a/gamejams.html
+++ b/gamejams.html
@@ -19,9 +19,8 @@
         <row-container>
             <h1>Scrap Race</h1>
         </row-container>
-
+        <div style='position:relative;padding-bottom:54%;'><iframe src='https://gfycat.com/ifr/CookedHarmoniousCockroach' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0' allowfullscreen></iframe></div>
         <row-container>
-            <img src="images/AnimalSquad.png" alt="AnimalSquad" style="width:250%">
             <textMiddle>
                 Racing game where you are only able to break instead of accelerate. Drive down the junk yard track and try to dodge obstacles
                 all while keeping an eye on the constant increasing speed of your shopping cart. Keep the speed in a sweet
@@ -50,9 +49,9 @@
             <h1>Beat Piston</h1>
         </row-container>
 
+        <div style='position:relative;padding-bottom:54%'><iframe src='https://gfycat.com/ifr/KlutzyAnyHadrosaurus' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0' allowfullscreen></iframe></div>
+     
         <row-container>
-            <img src="images/BeatPiston.gif" alt="UltimateParkourChallenge" style="width:250%">
-
             <textMiddle>
                 A rythm infinite runner. Tap in sync with the beat while also switching gears at the right time. Keep the rythm and dodge
                 obstacles and you will survive till the end! If you miss enough beats or crash into enough obstacles your
@@ -79,7 +78,7 @@
         </row-container>
 
         <row-container>
-            <img src="images/DieInTheUI.gif" alt="AnimalSquad" style="width:250%">
+            <img src="images/DieInTheUI.gif" alt="AnimalSquad" style="width:150%">
             <textMiddle>
                 Minigame challenges that have to be beaten without loosing all lives. Are you ready for madness? Trying to beat this game
                 will prove a challenge thats for sure. Simple tasks like pluggin in a USB Stick, typing a word or pressing
@@ -106,7 +105,7 @@
         </row-container>
 
         <row-container>
-            <img src="images/TheBeatDown.gif" alt="AnimalSquad" style="width:230%">
+            <img src="images/TheBeatDown.gif" alt="AnimalSquad" style="width:142%">
             <textMiddle>
                 Shoot your way out of trouble and minimize the mafia bosses galactic army as dual wielding police space ranger. Use your
                 booster and keep on collecting the spawning power ups to hold out for 5 minutes and survive the onslaught of
