--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
         </row-container>
 
         <row-container>
-            <img src="images/AnimalSquad.png" alt="AnimalSquad" style="width:300%">
+            <img src="images/AnimalSquad.png" alt="AnimalSquad" style="width:300%; margin: 60px;">
             <textMiddle>
                 Turn based strategy game in which you can fight a opponent to finally prove that you are the better tactician! Choose 5 animals
                 each with completly unqiue skills and try to combine their attacks to powerfull combos to gain the upperhand
@@ -53,7 +53,7 @@
         </row-container>
 
         <row-container>
-            <img src="images/UltimateParkourChallenge.gif" alt="UltimateParkourChallenge" style="width:200%">
+            <img src="images/UltimateParkourChallenge.gif" alt="UltimateParkourChallenge" style="width:200%; margin: 60px;">
 
             <textMiddle>
                 Run,Jump,Long Jump, High Jump, Slide, Dash, Swing, WallRun and WallDash your way to the goal. In this epic jump & run the
