Added new blog post

--- a/aboutme.html
+++ b/aboutme.html
@@ -6,18 +6,20 @@
 
 <body>
     <ul class="navigation">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Game Jams</a></li>
-        <li><a href="#">Archive</a></li>
-        <li><a href="#">About Me</a></li>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="gamejams.html">Game Jams</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="aboutme.html" style="text-decoration: underline">About Me</a></li>
     </ul>
 
     <row-container>
         <h1>About Me</h1>
     </row-container>
 
-    <img src="images/me.jpg" alt="Me" width="20%" height="20%">
+    <div style="justify-content: center;display: flex; margin-bottom: 40px;">
+    <img src="images/me.jpg" alt="Me" width="20%" height="20%" >
+    </div>
 
     <text-center>
         Hello there, my name is Rene Kienauer and I love making games. Since I can remember I have always been playing and talking
