--- a/gamejams.html
+++ b/gamejams.html
@@ -6,16 +6,15 @@
 
 <body>
     <ul class="navigation">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Game Jams</a></li>
-        <li><a href="#">Archive</a></li>
-        <li><a href="#">About Me</a></li>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="gamejams.html" style="text-decoration: underline">Game Jams</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="aboutme.html">About Me</a></li>
     </ul>
 
+
     <collumn-container>
-
-
         <row-container>
             <h1>Scrap Race</h1>
         </row-container>
@@ -42,7 +41,6 @@
             <download><a href="#">Download</a></download>
         </row-container>
         <small-space-container></small-space-container>
-
 
 
         <row-container>
@@ -72,7 +70,6 @@
         <small-space-container></small-space-container>
 
 
-
         <row-container>
             <h1>Die in the UI</h1>
         </row-container>
@@ -97,7 +94,6 @@
             <download><a href="https://drive.google.com/open?id=1KY9o-PsbDrqeU4uz8e4XpLG9KeEZO8Av">Download</a></download>
         </row-container>
         <small-space-container></small-space-container>
-
 
 
         <row-container>
