--- a/projects.html
+++ b/projects.html
@@ -6,11 +6,11 @@
 
 <body>
     <ul class="navigation">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Game Jams</a></li>
-        <li><a href="#">Archive</a></li>
-        <li><a href="#">About Me</a></li>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="projects.html" style="text-decoration: underline">Projects</a></li>
+        <li><a href="gamejams.html">Game Jams</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="aboutme.html">About Me</a></li>
     </ul>
 
     <collumn-container>
