--- a/aboutme.html
+++ b/aboutme.html
@@ -23,7 +23,7 @@
 
     <text-center>
         Hello there, my name is Rene Kienauer and I love making games. Since I can remember I have always been playing and talking
-        about games. Even though I wanted to be a gameplay progammer since I was 10 I did not really pursue this dream until
+        about games. Even though I wanted to be a game progammer since I was 10 I did not really pursue this dream until
         much later in life. Now I have found my calling and cant stop thinking about programming and designing them!
     </text-center>
     <br>
